--- a/Basic/index.html
+++ b/Basic/index.html
@@ -9,5 +9,5 @@
         <h1>Section 2: JavaScript Language Basics</h1>
     </body>
 
-    <script src="script.js"></script>
+    <script src="boolean.js"></script>
 </html>
