--- a/advance/index.html
+++ b/advance/index.html
@@ -9,5 +9,5 @@
         <h1>Section 2: JavaScript Language Basics</h1>
     </body>
 
-    <script src="inheritance.js"></script>
+    <script src="mapForof.js"></script>
 </html>
